--- a/test.html
+++ b/test.html
@@ -32,6 +32,7 @@
   <h1 id="title">My Browser!</h1>
   <p class="first">HTML, CSS and JavaScript are working on my browser :)</p>
   <p class="links">
+    <a href="http://host.test:8000/test.html">Test page</a>
     <a href="http://host.test:8000/test1.html">Test page1 </a>
     <a href="http://host.test:8000/test2.html">Test page2</a>
   </p>
