--- a/test1.html
+++ b/test1.html
@@ -15,6 +15,7 @@
 <body>
   <h1>Test Page 1</h1>
   <p class="red">This is a test page with red background color.</p>
+  <p><a href="http://host.test:8000/test.html">Go to Page</a></p>
   <p><a href="http://host.test:8000/test2.html">Go to Page 2</a></p>
 </body>
 
