--- a/test2.html
+++ b/test2.html
@@ -18,6 +18,7 @@
   <h1 id="blue">Test Page 2</h1>
   <a class="none">First inline element.</a>
   <a class="none">Second inline element.</a>
+  <p><a href="http://host.test:8000/test.html">Go to Page</a></p>
   <p><a href="http://host.test:8000/test1.html">Go to Page 1</a></p>
 </body>
 
